# Canvas

./: .clang-format  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
doc/: dynamic_view_add_remove_change.puml  dynamic_view_select.puml  static_architecture.puml  use_cases.puml
include/canvas/: Canvas.h  CanvasController.h  Common.h  Shapes.h
src/: CMakeLists.txt  CanvasController.cpp  CanvasImpl.cpp  CanvasImpl.h  Shapes.cpp
